Change largest view display items. Fix oldest not showing. Better background colours.

--- a/development/style.css
+++ b/development/style.css
@@ -139,8 +139,8 @@ section {
 }
 #oldest {
 	/*background-image: -o-linear-gradient(#e1e1e1,#d1d1d1);*/
-	background-color: #ddd;
-	color: #444;
+	background-color: #eee;
+	color: #505050;
 }
 
 #latest {
@@ -164,7 +164,7 @@ section {
 	display: table;
 	font-size: 55%;
 	border-top: 1px dotted #fff;
-	border-bottom: 1px dotted #500;
+	border-bottom: 1px dotted #505050;
 }
 
 .big #latest {
